--- a/CarRental/Views/Customer/RegisterForCustomer.cshtml
+++ b/CarRental/Views/Customer/RegisterForCustomer.cshtml
@@ -143,7 +143,7 @@
     <div class="register-card">
         <h2><i class="bi bi-person-plus-fill"></i> Customer Register</h2>
 
-        @using (Html.BeginForm("Index", "Login", FormMethod.Post))
+        @using (Html.BeginForm("RegisterForCustomer", "Customer", FormMethod.Post))
         {
             @Html.AntiForgeryToken()
 
